--- a/templates/includes/lower-nav.html
+++ b/templates/includes/lower-nav.html
@@ -16,7 +16,7 @@
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
                         <div class="lower-nav-icon-circle bg-ib-dark">
-                            <i class="fas fa-shop text-light text-center"></i>
+                            <i class="fas fa-shop text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">ALL PRODUCTS</p>
                     </div>
@@ -24,7 +24,7 @@
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
                         <div class="lower-nav-icon-circle bg-ib-dark">
-                            <i class="fas fa-bug text-light text-center"></i>
+                            <i class="fas fa-bug text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">THE BEES</p>
                     </div>
@@ -32,7 +32,7 @@
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
                         <div class="lower-nav-icon-circle bg-dark">
-                            <i class="fas fa-box-archive text-light text-center"></i>
+                            <i class="fas fa-box-archive text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">THE KIT</p>
                     </div>
@@ -40,7 +40,7 @@
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
                         <div class="lower-nav-icon-circle bg-ib-dark">
-                            <i class="fas fa-graduation-cap text-light text-center"></i>
+                            <i class="fas fa-graduation-cap text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">THE COURSES</p>
                     </div>
@@ -48,7 +48,7 @@
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
                     <div>
                         <div class="lower-nav-icon-circle bg-ib-dark">
-                            <i class="fas fa-jar text-light text-center"></i>
+                            <i class="fas fa-jar text-ib-light text-center"></i>
                         </div>
                         <p class="text-dark ms-2 lower-nav-link-text">THE GOOD STUFF</p>
                     </div>
