--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                     <div class="ib-search-box">
                         <input type="text" name="q" placeholder="Search our products">
                         <button type="submit">
-                            <i class="fas fa-search text-light"></i>
+                            <i class="fas fa-search text-ib-light"></i>
                         </button>
                     </div>
                 </form>
@@ -101,7 +101,7 @@
                         <a class="nav-link hex-nav-link" href="">
                             <div class="text-center ms-2">
                                 <div class="icon-hex {% if grand_total %}bag-contents{% else %}bag-empty{% endif %}">
-                                    <i class="fas fa-shopping-bag fa-lg text-light"></i>
+                                    <i class="fas fa-shopping-bag fa-lg text-ib-light"></i>
                                 </div>
                                 <p
                                     class="my-0 font-body bag-total {% if grand_total %}text-blue weight-bold{% else %}text-dark-grey weight-regular{% endif %}">
@@ -129,7 +129,7 @@
             </nav>
         </div>
         <div id="delivery-banner" class="row text-center">
-            <div class="col bg-dark-grey text-light">
+            <div class="col bg-dark-grey text-ib-light">
                 <h5 class="font-body my-1">FREE DELIVERY ON ALL ORDERS OVER £{{ free_delivery_threshold }}!</h5>
             </div>
         </div>
@@ -141,7 +141,7 @@
                         <div class="ib-search-box">
                             <input type="text" name="q" placeholder="Search our products">
                             <button type="submit">
-                                <i class="fas fa-search text-light"></i>
+                                <i class="fas fa-search text-ib-light"></i>
                             </button>
                         </div>
                     </form>
@@ -166,46 +166,66 @@
 
 
     <footer>
-        <div class="container-fluid bg-dark-grey d-flex font-body px-4 py-3">
+        <div class="container-fluid bg-dark-grey d-flex font-body px-4 py-4">
             <div class="row">
                 <div class="upper-footer-section col-6 col-sm-3 col-md-2 mb-3">
                     <h3 class="text-yellow weight-semibold mb-2">THE BUZZ</h3>
-                    <a class="d-block text-decoration-none mb-2">
+                    <a class="d-block text-decoration-none mb-2" href="https://www.facebook.com/" target="_blank" aria-label="Facebook - Opens in a new tab">
                         <i class="fa-brands fa-facebook text-yellow text-center d-inline"></i>
-                        <p class="text-light d-inline">Facebook</p>
+                        <p class="text-ib-light d-inline footer-link-text">Facebook</p>
                     </a>
-                    <a class="d-block text-decoration-none mb-2">
+                    <a class="d-block text-decoration-none mb-2" href="https://www.instagram.com/" target="_blank" aria-label="Instagram - Opens in a new tab">
                         <i class="fa-brands fa-instagram text-yellow text-center d-inline"></i>
-                        <p class="text-light d-inline">Instagram</p>
+                        <p class="text-ib-light d-inline footer-link-text">Instagram</p>
                     </a>
-                    <a class="d-block text-decoration-none mb-2">
+                    <a class="d-block text-decoration-none mb-2" href="https://www.pinterest.co.uk/" target="_blank" aria-label="Pinterest - Opens in a new tab">
                         <i class="fa-brands fa-pinterest text-yellow text-center d-inline"></i>
-                        <p class="text-light d-inline">Pinterest</p>
+                        <p class="text-ib-light d-inline footer-link-text">Pinterest</p>
                     </a>
-                    <a class="d-block text-decoration-none mb-2">
+                    <a class="d-block text-decoration-none mb-2" href="https://twitter.com/" target="_blank" aria-label="Twitter - Opens in a new tab">
                         <i class="fa-brands fa-twitter text-yellow text-center d-inline"></i>
-                        <p class="text-light d-inline">Twitter</p>
+                        <p class="text-ib-light d-inline footer-link-text">Twitter</p>
                     </a>
                 </div>
     
                 <div class="upper-footer-section col-6 col-sm-3 col-md-2 mb-3">
                     <h3 class="text-yellow weight-semibold mb-2">MORE INFO</h3>
-                    <a class="d-block text-decoration-none">
-                        <p class="text-light mb-2">FAQs</p>
+                    <a class="d-block text-decoration-none" href="">
+                        <p class="text-ib-light mb-2 footer-link-text">FAQs</p>
                     </a>
-                    <a class="d-block text-decoration-none">
-                        <p class="text-light mb-2">CONTACT US</p>
+                    <a class="d-block text-decoration-none" href="">
+                        <p class="text-ib-light mb-2 footer-link-text">CONTACT US</p>
                     </a>
                 </div>
     
                 <div class="upper-footer-section col-12 col-sm-6 col-md-8">
                     <h3 class="text-yellow weight-semibold mb-2">ABOUT US</h3>
-                    <p class="text-light">Island Bees was founded in 2012 by 2 Anglesey beekeepers with more honey and bees than they knew what to do with.  We stock a range of honey & bee-based products as well as beekeeping kit, you can also order bees from us if you live locally. Our award-winning courses run throughout the summer if you're keen to learn more about bees and beekeeping.</p>
-                    <p class="text-light"><em>Site is built for educational purposes and all products are entirely fictional. Transactions are made using Stripe's test mode and no money or products will be sent or received.</em></p>
+                    <p class="text-ib-light">Island Bees was founded in 2012 by 2 Anglesey beekeepers with more honey and bees than they knew what to do with.  We stock a range of honey & bee-based products as well as beekeeping kit, you can also order bees from us if you live locally. Our award-winning courses run throughout the summer if you're keen to learn more about bees and beekeeping.</p>
+                    <p class="text-ib-light"><em>Site is built for educational purposes and all products are entirely fictional. Transactions are made using Stripe's test mode and no money or products will be sent or received.</em></p>
                 </div>
             </div>
+        </div>
 
+        <div class="container-fluid bg-ib-dark d-flex font-body text-ib-light px-4 py-3">
+            <div class="row w-100 ib-row">
+                <p class="weight-light col-12 col-lg-9 col-xl-8 text-center lower-footer-text mb-2 mb-lg-0">ISLAND BEES IS A FULL STACK DJANGO E-COMMERCE SITE BUILT FOR EDUCATIONAL PURPOSES ONLY</p>
+                <div class="col-12 col-lg-3 col-xl-4 text-center" id="lower-footer-links">
+                    <p class="weight-semibold d-inline me-2 lower-footer-text mb-2 mb-lg-0">© EMMA HEWSON</p>
+                    <div class="d-inline">
+                        <a class="text-decoration-none text-ib-light me-2" href="https://www.linkedin.com/in/emmajmhewson/" target="_blank" aria-label="Linked In - Opens in a new tab">
+                            <i class="fa-brands fa-linkedin" aria-hidden="true"></i>
+                        </a>
+                        <a class="text-decoration-none text-ib-light me-2" href="https://github.com/emmahewson" target="_blank" aria-label="Git Hub - Opens in a new tab">
+                            <i class="fa-brands fa-github" aria-hidden="true"></i>
+                        </a>
+                        <a class="text-decoration-none text-ib-light" href="https://emmahewson.co.uk/" target="_blank" aria-label="My Portfolio - Opens in a new tab">
+                            <i class="fa-solid fa-globe" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
             
+
 
         </div>
     </footer>
