--- a/templates/includes/mobile-nav-bar.html
+++ b/templates/includes/mobile-nav-bar.html
@@ -64,7 +64,7 @@
                     <div class="text-center ms-2">
                         <div
                             class="icon-hex {% if grand_total %}bag-contents{% else %}bag-empty{% endif %}">
-                            <i class="fas fa-shopping-bag text-light"></i>
+                            <i class="fas fa-shopping-bag text-ib-light"></i>
                         </div>
                         <p
                             class="my-0 font-body bag-total {% if grand_total %}text-blue weight-bold{% else %}text-dark-grey weight-regular{% endif %}">
