--- a/templates/includes/lower-nav.html
+++ b/templates/includes/lower-nav.html
@@ -42,7 +42,7 @@
                         <div class="lower-nav-icon-circle bg-ib-dark">
                             <i class="fas fa-graduation-cap text-ib-light text-center"></i>
                         </div>
-                        <p class="text-dark ms-2 lower-nav-link-text">THE COURSES</p>
+                        <p class="text-dark ms-2 lower-nav-link-text">COURSES</p>
                     </div>
                 </a>
                 <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
@@ -50,7 +50,7 @@
                         <div class="lower-nav-icon-circle bg-ib-dark">
                             <i class="fas fa-jar text-ib-light text-center"></i>
                         </div>
-                        <p class="text-dark ms-2 lower-nav-link-text">THE GOOD STUFF</p>
+                        <p class="text-dark ms-2 lower-nav-link-text">PRODUCE</p>
                     </div>
                 </a>
             </div>
