--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,10 +1,76 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
 
-<div class="container-fluid home-div-test">
+<div id="home-hero">
 
 </div>
+
+<div class="container-fluid ib-container bg-blue-light text-dark-grey text-center px-3 px-md-4 py-3 py-md-5">
+    <div class="row">
+        <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <h1 class="font-title weight-bold section-title mb-2">WELCOME TO ISLAND BEES</h1>
+        </div>
+        <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <p class="font-body">We cater to all your bees' needs. Everything we sell is either hand made by us or sourced locally to our base on the Isle of Anglesey. We also run regular beekeeping courses for the bee curious! And of course you can also buy our award-winning honey and other produce made by our hard-working bees (with a little help from us).</p>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid ib-container bg-ib-light text-dark-grey px-3 px-md-4 py-3 py-md-5">
+    <div class="row text-center">
+        <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <h1 class="font-title weight-bold section-title mb-2">SHOP BY CATEGORY</h1>
+        </div>
+    </div>
+
+    
+
+
+
+<!-- Responsive Hexagon Grid: Taken from Temani Afif https://dev.to/afif/responsive-hexagon-grid-without-media-query-57g7 -->
+    <div class="mt-3 pb-5 hex-categories-wrapper">
+        <div class="main">
+            <div class="container-hex-grid">
+                <div class="py-5">
+                    <a class="text-decoration-none text-yellow" href="">
+                        <i class="fas fa-bug text-center w-100 category-icon-lg mt-1 mb-2"></i>
+                        <p class="text-center">THE BEES</p>
+                    </a>
+                </div>
+                <div class="py-5">
+                    <a class="text-decoration-none text-yellow" href="">
+                        <i class="fas fa-box text-center w-100 category-icon-lg mt-1 mb-2"></i>
+                        <p class="text-center">THE KIT</p>
+                    </a>
+                </div>
+                <div class="py-5">
+                    <a class="text-decoration-none text-yellow" href="">
+                        <i class="fas fa-graduation-cap text-center w-100 category-icon-lg mt-1 mb-2"></i>
+                        <p class="text-center">COURSES</p>
+                    </a>
+                </div>
+                <div class="py-5">
+                    <a class="text-decoration-none text-yellow" href="">
+                        <i class="fas fa-jar text-center w-100 category-icon-lg mt-1 mb-2"></i>
+                        <p class="text-center">PRODUCE</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 
 {% endblock %}
