--- a/templates/base.html
+++ b/templates/base.html
@@ -166,7 +166,7 @@
 
 
     <footer>
-        <div class="container-fluid bg-dark-grey d-flex font-body px-4 py-4">
+        <div class="container-fluid bg-dark-grey d-flex font-body px-3 px-md-4 py-3 py-md-4">
             <div class="row">
                 <div class="upper-footer-section col-6 col-sm-3 col-md-2 mb-3">
                     <h3 class="text-yellow weight-semibold mb-2">THE BUZZ</h3>
