feat: add hex grid and shop button to home hero

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,101 @@
 {% block content %}
 
 <div id="home-hero">
-
+    <div class="hero-hex-row">
+        <div class="hex">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex even">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+    </div>
+    <div class="hero-hex-row">
+        <div class="hex">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex even">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex even">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+    </div>
+    <div class="hero-hex-row">
+        <div class="hex">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex even">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex">
+            <a href="" id="hex-hero-button">
+                <div id="hex-hero-button-left" class="left"></div>
+                <div id="hex-hero-button-middle" class="middle d-flex align-items-center">
+                    <p class="font-title weight-bold text-center text-ib-light hex-hero-button-text">SHOP NOW!</p>
+                </div>
+                <div id="hex-hero-button-right" class="right"></div>
+            </a>
+        </div>
+        <div class="hex even">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+    </div>
+    <div class="hero-hex-row">
+        <div class="hex">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex even">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex even">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+        <div class="hex">
+            <div class="left"></div>
+            <div class="middle"></div>
+            <div class="right"></div>
+        </div>
+    </div>
+    
+    
+        
 </div>
 
 <div class="container-fluid ib-container bg-blue-light text-dark-grey text-center px-3 px-md-4 py-3 py-md-5">
@@ -68,6 +162,10 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="container-fluid" id="featured-products-div">
+
 </div>
 
 
