feat: added product & category models

--- a/templates/base.html
+++ b/templates/base.html
@@ -161,6 +161,12 @@
     {% block page_header %}
     {% endblock %}
 
+    <div class="container header-container">
+        <div class="row">
+            <div class="col"></div>
+        </div>
+    </div>
+
     {% block content %}
     {% endblock %}
 
